# GeoNamesMirror

./: .gitignore  README.md  pyproject.toml  update_allCountries.py
.github/workflows/: update_allCountries.yml
