[tool.poetry]
name = "geonamesmirror"
version = "0.1.0"
description = "Automated mirror of GeoNames geographical database, updated weekly."
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
loguru = "^0.7.2"
tqdm = "^4.66.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.develop.dependencies]
ruff = "^0.6.5"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
